--- a/templates/my.cnf.j2
+++ b/templates/my.cnf.j2
@@ -14,7 +14,7 @@ port = {{ mysql_port }}
 bind-address = {{ mysql_bind_address }}
 datadir = {{ mysql_datadir }}
 socket = {{ mysql_socket }}
-pid-file = {{ mysql_pid_file }}
+pid-file = /var/run/{{ mysql_daemon }}/{{ mysql_daemon }}.pid
 {% if mysql_skip_name_resolve %}
 skip-name-resolve
 {% endif %}
@@ -123,7 +123,7 @@ quick
 max_allowed_packet = {{ mysql_mysqldump_max_allowed_packet }}
 
 [mysqld_safe]
-pid-file = {{ mysql_pid_file }}
+pid-file = /var/run/{{ mysql_daemon }}/{{ mysql_daemon }}.pid
 
 {% if mysql_config_include_files | length %}
 # * IMPORTANT: Additional settings that can override those from this file!
